<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.UdregnKapacitetsomkostninger">

    <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp" app:srcCompat="@drawable/add_medium_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintVertical_bias="0.46" android:background="@drawable/round_button"
            android:scaleType="fitXY" android:onClick="tilfoejTilKapacitetsomkostninger"
            android:id="@+id/kapacitetsomkostningImage"/>
    <de.codecrafters.tableview.TableView
            android:layout_width="425dp"
            android:layout_height="272dp"
            app:tableView_columnCount="2" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintVertical_bias="0.112" android:id="@+id/tableView3"/>
    <TextView
            android:text="@string/udregn_vrige_nkapacitetsomkostninger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.01"
            android:textStyle="bold" android:textSize="18sp"
            android:textColor="#000000" android:textAlignment="center" android:id="@+id/titel3"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="25dp" app:srcCompat="@drawable/backarrow" android:id="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.044" app:layout_constraintVertical_bias="0.02"
            android:onClick="tilbageFraUdregnKapacitetsomkostninger"/>
    <EditText
            android:nextFocusDown="@+id/kapacitetsomkostningPrisInput"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.08" app:layout_constraintVertical_bias="0.46"
            android:textSize="14sp" android:hint="@string/omkostningsnavn" android:maxLines="1"
            android:id="@+id/kapacitetsomkostningNavnInput" android:backgroundTint="#000000"/>

    <EditText
            android:imeOptions="actionDone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.70" app:layout_constraintVertical_bias="0.46"
            android:textSize="14sp" android:hint="@string/omkostningspris"
            android:id="@+id/kapacitetsomkostningPrisInput" android:backgroundTint="#000000"/>
    <TextView
            android:text="@string/tilf_j_ny_kapacitetsomkostning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.26" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.46"
            android:textColor="#000000" android:id="@+id/kapacitetsomkostningText"/>
    <TextView
            android:text="@string/samlede_vrige_nkapacitetesomkostninger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.52" android:id="@+id/kapacitetsomkostningResultatText"/>

    <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.872" app:layout_constraintVertical_bias="0.521"
            android:textStyle="bold" android:textColor="#000000" android:textAlignment="viewEnd"
            android:id="@+id/udregnKapacitetsomkostningResultat"/>
    <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp" app:srcCompat="@drawable/add_medium_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintVertical_bias="0.46" android:background="@drawable/round_button"
            android:scaleType="fitXY" android:onClick="addElementToTable"
            android:id="@+id/tilfoejTilKapacitetsomkostningKnap"/>
    <Button
            android:text="@string/godkend"
            android:layout_width="425dp"
            android:layout_height="wrap_content" android:id="@+id/godkendKapacitetsomkostningerKnap"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.95"
            android:onClick="godkendKapacitetsomkostninger"/>


</androidx.constraintlayout.widget.ConstraintLayout>


