<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AndroidView">
    <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp" app:srcCompat="@drawable/add_medium_grey"
            android:id="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintVertical_bias="0.354" android:background="@drawable/round_button"
            android:scaleType="fitXY"/>
    <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp" app:srcCompat="@drawable/add_medium_grey"
            android:id="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.958"
            android:background="@drawable/round_button"
            android:scaleType="fitXY" app:layout_constraintVertical_bias="0.446"/>
    <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp" app:srcCompat="@drawable/add_medium_grey"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintVertical_bias="0.1" android:background="@drawable/round_button"
            android:scaleType="fitXY" android:onClick="goToUdregnOmsaetning"/>
    <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp" app:srcCompat="@drawable/add_medium_grey"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintVertical_bias="0.151" android:background="@drawable/round_button"
            android:scaleType="fitXY"/>
    <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.80" app:layout_constraintVertical_bias="0.30"
            android:text="tomt" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/markedsfoeringsbidrag"
            android:textAlignment="viewEnd" android:textColor="#000000"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/renteomkostninger"
            android:textSize="14sp"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.55"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/afskrivninger"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.45"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/oevrigeKapacitetsomkostninger"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.35"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"/>
    <TextView
            android:text="@string/oms_tning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" app:layout_constraintVertical_bias="0.10"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#000000" android:textAlignment="viewStart"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" app:layout_constraintVertical_bias="0.45"
            android:text="@string/afskrivninger"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#000000" android:textAlignment="viewStart"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" app:layout_constraintVertical_bias="0.55"
            android:text="@string/renteomkostninger"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#000000" android:textAlignment="viewStart"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" app:layout_constraintVertical_bias="0.30"
            android:text="@string/markedsf_ringsbidrag" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#000000" android:textAlignment="viewStart"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" app:layout_constraintVertical_bias="0.40"
            android:text="@string/indtjeningsbidrag" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#000000" android:textAlignment="viewStart"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" app:layout_constraintVertical_bias="0.50"
            android:text="@string/resultat_f_r_renter" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#000000" android:textAlignment="viewStart"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" app:layout_constraintVertical_bias="0.70"
            android:text="@string/resultat" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#000000"/>
    <TextView
            android:text="@string/markedsf_ringsomkostninger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.065"
            android:textColor="#000000" android:textAlignment="viewStart"/>
    <TextView
            android:text="@string/vrige_kapacitetsomkostninger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065" app:layout_constraintVertical_bias="0.35"
            app:layout_constraintTop_toTopOf="parent" android:textAlignment="viewStart" android:textColor="#000000"/>
    <TextView
            android:text="@string/vareforbrug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.05"
            android:textColor="#000000" android:textAlignment="viewStart"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/t3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05" app:layout_constraintVertical_bias="0.20"
            android:text="@string/bruttofortjeneste" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#000000" android:textAlignment="viewStart"/>
    <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/bruttofortjeneste"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.80" app:layout_constraintVertical_bias="0.20"
            android:text="tomt" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:textAlignment="viewEnd" android:textColor="#000000"/>
    <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.80" app:layout_constraintVertical_bias="0.40"
            android:text="tomt" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/indtjeningsbidrag"
            android:textAlignment="viewEnd" android:textColor="#000000"/>
    <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.80" app:layout_constraintVertical_bias="0.50"
            android:text="tomt" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/resultatFoerRenter"
            android:textAlignment="viewEnd" android:textColor="#000000"/>
    <TextView
            android:text="@string/resultatopg_relse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/titel"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.02"
            android:textStyle="bold" android:textSize="18sp" app:layout_constraintHorizontal_bias="0.5"
            android:textColor="#000000"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/omsaetning"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.10"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.8" android:textAlignment="viewEnd"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/vareforbrug"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.15"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/markedsfoeringsomkostninger"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.25"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"/>
    <TextView
            android:text="tomt"
            android:layout_width="220dp"
            android:layout_height="wrap_content" android:id="@+id/resultat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:textStyle="bold" android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.675"
            android:textAlignment="viewEnd"/>

</androidx.constraintlayout.widget.ConstraintLayout>